5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1800_2565.log
== TEST (2019-06-06 11:07:03) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:")))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=h*0.75):
		a+=1
	elif (x<5) and (p[y]>h*0.75):
		b +=1
	elif ( p[y]<h*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
File "XXXX", line 4
    cg = float(input()))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:07:24) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=h*0.75):
		a+=1
	elif (x<5) and (p[y]>h*0.75):
		b +=1
	elif ( p[y]<h*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:08:17) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=h*0.75):
		a+=1
	elif (x<5) and (h[y]>h*0.75):
		b +=1
	elif ( h[y]<h*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:09:02) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=h*0.75):
		a+=1
	elif (x<5) and (h[y]>h*0.75):
		b +=1
	elif ( h[y]<h*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:15) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=ch*0.75):
		a+=1
	elif (x<5) and (h[y]>ch*0.75):
		b +=1
	elif ( h[y]<ch*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:48) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=cg*0.75):
		a+=1
	elif (x<5) and (h[y]>cg*0.75):
		b +=1
	elif ( h[y]<cg*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:11:08) 
-- CODE:
from numpy import*
m = array(eval(input("Medias:")))
h = array(eval(input("horas:")))
cg = float(input("Carga horaria:"))
v = zeros(3, dtype=int)
a = 0
b = 0
c = 0
y = 0
for x in m:
	if(x>= 5)and(h[y]>=cg*0.75):
		a+=1
	elif (x<5) and (h[y]>cg*0.75):
		b +=1
	elif ( h[y]<cg*0.75):
		c+=1
	y+=1
v[0]=a
v[1]=b
v[2]=c
print(v)
-- EXECUTION TIME:
1.14531
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
